@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Owner {
}
class Agent{

}
class Employee{
    String name
    int cCNumber
    int taxNumber
    String address
    String email
    String phoneNumber
}
class Listing{
    propertyID
    price
    sellOrRent

}
class Property {
    float area
    City city
    float cityCenterDistance
    List<Image> photograph
}
class House {
     int numberOfBedrooms
     int numberOfBathrooms
     int numberOfParkingSpaces
     List<String> equipment
     bool hasBasement
     bool hasInhabitableLoft
     SunExposure sunExposure
}

class Apartment {
     int numberOfBedrooms
     int numberOfBathrooms
     int numberOfParkingSpaces
     List<String> equipment
}
class Land {
    int listingID
    bool visible
    float price
    float commission
    TypeOfBusiness typeOfBusiness
}

class City{
    name
}
class District{
    name
}
class State{
    name
}



Listing "*" -- "*" Property: contains >
Owner "1" -- "*" Listing: creates >
Owner "1" -- "*" Property: owns >
House -|> Property
Apartment -|> Property
Land -|> Property
Property "1" - "1" City: located in >
City "*" - "1" District: located in >
District "*" - "1" State: located in >
Owner "1" - "1" Agent: chooses >
Agent "1" - "1" Employee: is an >
Agent "1" - "*" Listing: validates >





@enduml